<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_poster_series"
        android:layout_width="230dp"
        android:layout_height="354dp"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_poster_series"
            android:layout_width="200dp"
            android:layout_height="294dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@color/red2e"
            android:contentDescription="@string/poster_movie"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_series"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="bottom|center"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_start_series"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/start_watch"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/card_poster_series"
        app:layout_constraintTop_toBottomOf="@+id/card_poster_series" />

    <TextView
        android:id="@+id/text_genres_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_series"
        android:text="@string/genres" />

    <TextView
        android:id="@+id/tv_genres_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:text="@string/genres"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_genres_series"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_series" />

    <TextView
        android:id="@+id/text_realese_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_genres_series"
        android:text="@string/realese" />

    <TextView
        android:id="@+id/tv_realese_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:text="@string/realese"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_realese_series"
        app:layout_constraintTop_toBottomOf="@+id/text_genres_series" />

    <TextView
        android:id="@+id/text_rating_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_realese_series"
        android:text="@string/rating" />

    <TextView
        android:id="@+id/tv_rating_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:text="@string/rating"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_rating_series"
        app:layout_constraintTop_toBottomOf="@+id/text_realese_series" />

    <TextView
        android:id="@+id/tv_description_series"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating_series"
        android:text="@string/description" />

    <TextView
        android:id="@+id/text_list_episode_series"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/list_episode"
        android:textColor="@color/red2e"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_series" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_episode_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_list_episode_series"
        tools:listitem="@layout/items_episode_list" />

</androidx.constraintlayout.widget.ConstraintLayout>