<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_poster_movie"
        android:layout_width="230dp"
        android:layout_height="354dp"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_poster_movie"
            android:layout_width="200dp"
            android:layout_height="294dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@color/red2e"
            android:contentDescription="@string/poster_series"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="bottom|center"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_genres_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_poster_movie"
        android:text="@string/genres" />

    <TextView
        android:id="@+id/tv_genres_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:text="@string/genres"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_genres_movie"
        app:layout_constraintTop_toBottomOf="@+id/card_poster_movie" />

    <TextView
        android:id="@+id/text_realese_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_genres_movie"
        android:text="@string/realese" />

    <TextView
        android:id="@+id/tv_realese_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:text="@string/realese"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_realese_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_genres_movie" />

    <TextView
        android:id="@+id/text_rating_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_realese_movie"
        android:text="@string/rating" />

    <TextView
        android:id="@+id/tv_rating_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:text="@string/rating"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_rating_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_realese_movie" />

    <TextView
        android:id="@+id/tv_description_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating_movie"
        android:text="@string/description" />

</androidx.constraintlayout.widget.ConstraintLayout>