<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_black"
        android:title="@string/title_movie" />
    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tvshow_black"
        android:title="@string/title_tvshow" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/title_favorite" />

</menu>